--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,47 @@
 version: '1.0'
 
 services:
-  python_app:
+  backend_app:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    container_name: backend_app
     ports:
       - "8000:8000"
-    # 確保 postgres_db 服務啟動後，python_app 服務才啟動
+    # 確保 postgres_db 服務啟動後，backend_app 服務才啟動
     depends_on:
       - postgres_db
 
   postgres_db:
     image: postgres:latest
+    container_name: postgres_db
     ports:
       - "5432:5432"
     env_file:
       - ./database/.env
     volumes:
       - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+
+  vote-app:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.vote
+    container_name: vote-web-container
+    ports:
+      - "6110:6110"
+    environment:
+      - PORT=6110
+    depends_on:
+      - backend_app
+
+  result-app:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.result
+    container_name: result-web-container
+    ports:
+      - "6111:6111"
+    environment:
+      - PORT=6111
+    depends_on:
+      - backend_app
